2000-05-02   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-scheme-encrypt-region): Don't quote recipient;
	concatenate all arguments destructively.

2000-04-13   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el: Fix author's mailing address.
	(pgg-gpg-process-region): Add --output option; set status fd to 2.
	(pgg-gpg-possibly-cache-passphrase): New function.
	(pgg-gpg-shell-file-name): Abolish.
	(pgg-gpg-shell-command-switch): Abolish.
	(pgg-scheme-lookup-key): Work on temp buffer.

2000-03-01  Yoshiki Hayashi <yoshiki@xemacs.org>

	* mime-image.el (mime-display-image): Don't wait for redisplay.

2000-02-23   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-image.el
	(mime-image-normalize-xbm-buffer): New inline function.
	(mime-image-create) [XEmacs || Emacs21]: Use it for XBM data.
	(mime-display-image): Don't create temporary file.

2000-02-21   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* semi-def.el (mime-user-interface-product): Bump up to
	EMIKO 1.13.12.

	* pgg.el (pgg-temp-buffer-show-function): Use
	`shrink-window-if-larger-than-buffer'.

	* pgg-gpg.el (pgg-gpg-process-region): Fix cleanup form.

	* pgg-pgp.el (pgg-pgp-process-region): Ditto.

	* pgg-pgp5.el (pgg-pgp5-process-region): Ditto.

	* semi-setup.el (mime-setup-enable-inline-image): Remove checking
	of bitmap-mule; use `eval-after-load' instead of
	`call-after-loaded' to require `mime-image'.

	* mime-image.el (mime-display-image): Set default umask to 077.
	(mime-image-create): Use `nothing-image-instance-p'.

	* mime-pgp.el: When it is compiled, define `smime-output-buffer'
	and `smime-errors-buffer' to avoid compiler warning.

	* mime-edit.el: Ditto.

	* mime-pgp.el
	(mime-view-application/pkcs7-mime): Regard smime-type as
	"enveloped-data" unless it is specified.

	* smime.el (smime-directory-files): Abolish.
	(smime-verify-region): Abolish local variable `args'.

2000-02-20   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>
